...
  "audioCopiedFromYoutubePlaylistToLocalPlaylistPlaylistWarning": "Audio \"{audioTitle}\" copied from Youtube playlist \"{fromPlaylistTitle}\" to local playlist \"{toPlaylistTitle}\".\n\nIF THE DELETED AUDIO VIDEO \"{audioTitle}\" REMAINS IN THE \"{fromPlaylistTitle}\" YOUTUBE PLAYLIST, IT WILL BE DOWNLOADED AGAIN THE NEXT TIME YOU DOWNLOAD THE PLAYLIST !",
  "audioCopiedFromYoutubePlaylistToYoutubePlaylistPlaylistWarning": "Audio \"{audioTitle}\" copied from Youtube playlist \"{fromPlaylistTitle}\" to Youtube playlist \"{toPlaylistTitle}\".\n\nIF THE DELETED AUDIO VIDEO \"{audioTitle}\" REMAINS IN THE \"{fromPlaylistTitle}\" YOUTUBE PLAYLIST, IT WILL BE DOWNLOADED AGAIN THE NEXT TIME YOU DOWNLOAD THE PLAYLIST !",
  "audioCopiedFromYoutubePlaylistToLocalPlaylist": "Audio \"{audioTitle}\" copied from Youtube playlist \"{fromPlaylistTitle}\" to local playlist \"{toPlaylistTitle}\".",
  "audioCopiedFromYoutubePlaylistToYoutubePlaylist": "Audio \"{audioTitle}\" copied from Youtube playlist \"{fromPlaylistTitle}\" to Youtube playlist \"{toPlaylistTitle}\".",
  "copiedFromPlaylistLabel": "Copied from playlist",
  "copiedToPlaylistLabel": "Copied to playlist",
  "audioPlayerViewNoCurrentAudio": "No audio selected",
  "deletePlaylist": "Delete playlist ...",
  "deleteYoutubePlaylistDialogTitle": "Delete Youtube Playlist \"{title}\"",
  "deleteLocalPlaylistDialogTitle": "Delete local Playlist \"{title}\"",
  "deletePlaylistDialogComment": "Deleting the playlist and all its audios as well as its JSON file and its directory."
}
